# traci-api

./: .gitignore  README.md
scenarios/crossing/: crossing.net.xml  crossing.rou.xml  crossing.sumocfg
scenarios/scenario_1/: scenario_1.net.xml  scenario_1.rou.xml  scenario_1.sumocfg
scenarios/scenario_2_no_crosswalk/: scenario_2.net.xml  scenario_2.rou.xml  scenario_2.sumocfg  viewsettings.xml
scenarios/scenario_2_righthand_with_crosswalk/: scenario_2.net.xml
scenarios/scenario_2_with_crosswalk/: net.net.xml  scenario_2.net.xml  scenario_2.rou.xml
scenarios/scenario_3_no_crosswalk/: scenario_3.rou.xml
scenarios/scenario_3_righthand_with_crosswalk/: scenario_3.net.xml  scenario_3.rou.xml
scenarios/scenario_3_with_crosswalk/: scenario_3.net.xml  scenario_3.sumocfg
scenarios/scenario_4/: scenario_4.net.xml  scenario_4.rou.xml  scenario_4.sumocfg
sumo-1.1.0/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
sumo-1.1.0/src/: CMakeLists.txt  Makefile  Makefile.in  config.h.in  netconvert  od2trips  version.h
sumo-1.1.0/src/.deps/: netconvert_main.Po  od2trips_main.Po  sumo_main.Po
sumo-1.1.0/src/activitygen/: Makefile  Makefile.in  activitygen
sumo-1.1.0/unittest/: Makefile  Makefile.in
traci-cpp/: CMakeLists.txt
traci-cpp/include/traci_api/: TraCIAPI.h  TraCIDefs.h  config.h  socket.h
traci-cpp/src/: TraCIAPI.cpp  socket.cpp  storage.cpp
traci-cpp/tests/: example.cpp
traci-python/traci_car/: runner.py
traci-python/traci_pedestrian_crossing/: pedestrians.trip.xml
traci/traci_pedestrian_crossing/: pedcrossing.net.xml
(+699 files in other folders)
